--- a/app/package.json
+++ b/app/package.json
@@ -30,9 +30,11 @@
     "cordova-android": "8.1.0",
     "cordova-plugin-camera": "4.1.0",
     "firebase": "^7.3.0",
+    "firebase-admin": "^7.0.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
+    "sdk": "^0.5.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
@@ -44,7 +46,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "typescript": "~2.6.2"
+    "typescript": "^3.7.2"
   },
   "description": "An Ionic project",
   "cordova": {
