--- a/app/package.json
+++ b/app/package.json
@@ -12,24 +12,28 @@
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
+    "@angular/cli": "^8.3.20",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
     "@angular/core": "5.2.11",
+    "@angular/fire": "^5.2.3",
     "@angular/forms": "5.2.11",
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@google-cloud/vision": "^1.7.0",
-    "@ionic-native/camera": "^5.16.0",
+    "@ionic-native/camera": "^4.20.0",
     "@ionic-native/core": "~4.20.0",
+    "@ionic-native/file": "^5.17.1",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
+    "angularfire2": "^5.2.3",
     "brmasker-ionic-3": "^1.6.3",
     "cordova-android": "8.1.0",
     "cordova-plugin-camera": "4.1.0",
-    "firebase": "^7.3.0",
+    "firebase": "^7.5.0",
     "firebase-admin": "^7.0.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
